added code demos

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,54 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+
+      // 'use strict';
+
+      // function doIt() {
+      //   console.log(this);
+      // }
+
+      // doIt();
+      // window.doIt();
+
+      // const o = {
+      //   id: 2,
+      //   doIt: doIt,
+      // };
+
+      // o.doIt();
+
+      // console.log(doIt === o.doIt);
+
+      // const fn = o.doIt;
+
+      // fn();
+
+
+      // function outer() {
+
+      //   console.log(this);
+
+      //   // const that = this;
+
+      //   const fn = () => {
+      //     console.log(this);
+      //   };
+
+      //   fn();
+      // }
+
+      // const t = {
+      //   outer: outer,
+      //   id: 3,
+      // }
+
+      // t.outer();
+
+
+
+    </script>
   </body>
 </html>
